[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false

[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
	# exit from guest
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	# allow stdio passthrough
	"-serial", "stdio",
	# hide display window
	"-display", "none"
]
test-success-exit-code = 33	# (0x10 << 1) | 1

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.12"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
